--- a/app/views/pins/new.html.haml
+++ b/app/views/pins/new.html.haml
@@ -1,6 +1,7 @@
-%h1 New form
+.col-md-6.col-md-offset-3
+	%h1 New form
 
 
-= render 'form'
+	= render 'form'
 
-= link_to "back", root_path
+	= link_to "back", root_path
