--- a/app/views/pins/new.html.haml
+++ b/app/views/pins/new.html.haml
@@ -1,7 +1,9 @@
 .col-md-6.col-md-offset-3
-	%h1 New form
-
-
-	= render 'form'
-
-	= link_to "back", root_path
+	.row
+		.panel.panel-default
+			.panel-heading
+				%h1 New Pin
+			.panel-body
+				%h1 New form
+				= render 'form'
+				= link_to "back", root_path
